--- a/MyApplication/app/src/main/res/layout/fragment_home.xml
+++ b/MyApplication/app/src/main/res/layout/fragment_home.xml
@@ -20,7 +20,7 @@
                 android:layout_marginRight="10dp"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:background="@drawable/ic_home_black_24dp"
+                android:background="@drawable/home_icon"
                 android:backgroundTint="@color/colorPrimary"
                 />
             <TextView
