--- a/MyApplication/app/src/main/res/menu/nav_items.xml
+++ b/MyApplication/app/src/main/res/menu/nav_items.xml
@@ -4,14 +4,14 @@
 
     <item
         android:id="@+id/nav_home"
-        android:icon="@drawable/ic_home_black_24dp"
+        android:icon="@drawable/home_icon"
         android:title="@string/nav_home" />
     <item
         android:id="@+id/nav_sanpham"
-        android:icon="@drawable/ic_search_black_24dp"
+        android:icon="@drawable/box_icon"
         android:title="@string/nav_sanpham" />
     <item
         android:id="@+id/nav_dichvu"
-        android:icon="@drawable/ic_build_black_24dp"
+        android:icon="@drawable/service_icon"
         android:title="@string/nav_service" />
 </menu>
