--- a/MyApplication/app/src/main/res/layout/activity_login.xml
+++ b/MyApplication/app/src/main/res/layout/activity_login.xml
@@ -61,9 +61,14 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="48dp"
             android:layout_marginBottom="64dp"
-            android:enabled="false"
+            android:enabled="true"
             android:text="Đăng nhập" />
-
+        <Button
+            android:id="@+id/dangki"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="start"
+            android:text="Đăng kí" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
