--- a/MyApplication/app/src/main/res/layout/fragment_tintuc.xml
+++ b/MyApplication/app/src/main/res/layout/fragment_tintuc.xml
@@ -48,16 +48,25 @@
         android:text="Tin tức và sự kiện"
         android:textColor="@android:color/black"
         android:textStyle="bold"/>
-
     <ListView
         android:id="@+id/listTintuc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:divider="@null"/>
-<Button
-    android:id="@+id/them"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    />
+        android:divider="@null">
+
+    </ListView>
+
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_gravity="center"
+        android:layout_width="74dp"
+        android:layout_height="62dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:visibility="gone" />
+
+
 
 </LinearLayout>
