--- a/MyApplication/app/src/main/res/layout/item_listview_tintuc.xml
+++ b/MyApplication/app/src/main/res/layout/item_listview_tintuc.xml
@@ -16,17 +16,17 @@
         android:orientation="horizontal">
         <ImageView
             android:id="@+id/ivTintuc"
-            android:layout_width="120dp"
-            android:layout_height="90dp"
-            android:layout_marginBottom="3dp"
-            android:layout_marginLeft="5dp"
+            android:layout_width="165dp"
+            android:layout_height="125dp"
             android:layout_gravity="center_vertical"
             android:src="@drawable/tt_ab150"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:layout_marginLeft="2dp">
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="3dp">
             <TextView
                 android:id="@+id/tvTitle"
                 android:layout_width="match_parent"
