--- a/MyApplication/app/src/main/res/values/colors.xml
+++ b/MyApplication/app/src/main/res/values/colors.xml
@@ -8,4 +8,7 @@
     <color name="Red">#FF4343</color>
     <color name="LightBlue">#27A6F9</color>
     <color name="Black">#0D212E</color>
+    <color name="RedButton">#E12029</color>
+    <color name="Green">#27EA2A</color>
+    <color name="Gray">#A2ADA3</color>
 </resources>
