--- a/MyApplication/app/src/main/res/layout/fragment_tracuusanpham.xml
+++ b/MyApplication/app/src/main/res/layout/fragment_tracuusanpham.xml
@@ -170,8 +170,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
 
-                android:background="@drawable/iconbrio">
-            </Button>
+                android:background="@drawable/iconbrio"></Button>
         </androidx.cardview.widget.CardView>
         <androidx.cardview.widget.CardView
             android:layout_width="90dp"
