--- a/MyApplication/app/src/main/res/drawable/border_button.xml
+++ b/MyApplication/app/src/main/res/drawable/border_button.xml
@@ -3,5 +3,5 @@
     <corners android:radius="5dp"/>
     <padding/>
     <stroke android:width="1dp" android:color="@color/RedButton"/>
-    <solid android:color="@color/RedButton"/>
+    <solid android:color="@color/White"/>
 </shape>
