--- a/MyApplication/app/src/main/res/layout/fragment_caidat.xml
+++ b/MyApplication/app/src/main/res/layout/fragment_caidat.xml
@@ -6,14 +6,12 @@
     android:layout_height="match_parent">
     <Button
         android:id="@+id/btnAddTinTuc"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_margin="20dp"
         android:text="Thêm tin tức"
-        android:textColor="@color/White"
+        android:textColor="@color/RedButton"
         android:textStyle="bold"
-        android:background="@drawable/border_button"
-        />
+        android:background="@drawable/border_button"/>
 </LinearLayout>
