--- a/MyApplication/app/src/main/res/layout/fragment_sanpham.xml
+++ b/MyApplication/app/src/main/res/layout/fragment_sanpham.xml
@@ -63,7 +63,7 @@
                     android:id="@+id/tab2"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" >
-                    <include layout="@layout/fragment_mybike"/>
+                    <include layout="@layout/fragment_damua"/>
                 </LinearLayout>
                 <LinearLayout
                     android:id="@+id/tab3"
