--- a/MyApplication/app/src/main/res/values/styles.xml
+++ b/MyApplication/app/src/main/res/values/styles.xml
@@ -16,5 +16,6 @@
 
     <style name="TabBar" parent="TextAppearance.Design.Tab">
         <item name="android:textSize">14sp</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
     </style>
 </resources>
