--- a/MyApplication/app/src/main/res/layout/activity_listxe.xml
+++ b/MyApplication/app/src/main/res/layout/activity_listxe.xml
@@ -5,6 +5,27 @@
     android:layout_height="match_parent"
     tools:context=".XeActivity"
     >
+    <Toolbar
+        android:layout_marginLeft="-15dp"
+        android:layout_width="match_parent"
+        android:layout_height="55dp">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tvTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:textSize="20dp"
+                android:textColor="@android:color/black"
+                android:textStyle="bold"/>
+
+        </RelativeLayout>
+
+    </Toolbar>
     <ListView
         android:id="@+id/listXe"
         android:layout_width="match_parent"
