--- a/MyApplication/app/src/main/res/layout/fragment_tracuusanpham.xml
+++ b/MyApplication/app/src/main/res/layout/fragment_tracuusanpham.xml
@@ -10,232 +10,244 @@
     android:paddingTop="10dp"
     android:paddingLeft="10dp"
     android:paddingRight="10dp"
+    android:layout_marginBottom="60dp"
     >
 
-    <com.synnapps.carouselview.CarouselView
-        android:id="@+id/carouselView"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        app:fillColor="#FFFFFFFF"
-        app:pageColor="#00000000"
-        app:radius="6dp"
-        app:slideInterval="3000"
-        app:strokeColor="#FF777777"
-        app:strokeWidth="1dp" />
+    <ViewFlipper
+        android:id="@+id/v_flipper"
+        android:layout_width="wrap_content"
+        android:layout_height="210dp"
+        android:layout_centerHorizontal="true">
+    </ViewFlipper>
 
-    <TextView
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="25dp"
-        android:text="Xe máy"
-        android:textStyle="bold"
-        >
-    </TextView>
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="95dp"
-        >
-        <androidx.cardview.widget.CardView
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:layout_marginRight="10dp"
-            card_view:cardUseCompatPadding="true"
-            card_view:cardCornerRadius="8dp">
-            <Button
-                android:id="@+id/btnXetayga"
-                android:background="@drawable/icontayga"
+        android:layout_height="match_parent"
+        android:layout_marginTop="5dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <TextView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="25dp"
+                android:text="Xe máy"
+                android:textStyle="bold"
                 >
-            </Button>
-        </androidx.cardview.widget.CardView>
-        <androidx.cardview.widget.CardView
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:layout_marginRight="10dp"
-            card_view:cardUseCompatPadding="true"
-            card_view:cardCornerRadius="8dp">
-
-            <Button
-                android:id="@+id/btnXeso"
+            </TextView>
+            <LinearLayout
+                android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                
-                android:background="@drawable/iconxeso">
-            </Button>
-        </androidx.cardview.widget.CardView>
-        <androidx.cardview.widget.CardView
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:layout_marginRight="10dp"
-            card_view:cardUseCompatPadding="true"
-            card_view:cardCornerRadius="8dp">
-            <Button
-                android:id="@+id/btnMoto"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@drawable/iconmoto"
+                android:layout_height="95dp"
                 >
-            </Button>
-        </androidx.cardview.widget.CardView>
-        <androidx.cardview.widget.CardView
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:layout_marginRight="20dp"
-            card_view:cardUseCompatPadding="true"
-            card_view:cardCornerRadius="8dp">
+                <androidx.cardview.widget.CardView
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
+                    android:layout_marginRight="10dp"
+                    card_view:cardUseCompatPadding="true"
+                    card_view:cardCornerRadius="8dp">
+                    <Button
+                        android:id="@+id/btnXetayga"
+                        android:background="@drawable/icontayga"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        >
+                    </Button>
+                </androidx.cardview.widget.CardView>
+                <androidx.cardview.widget.CardView
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
+                    android:layout_marginRight="10dp"
+                    card_view:cardUseCompatPadding="true"
+                    card_view:cardCornerRadius="8dp">
 
-            <Button
-                android:id="@+id/btnContay"
+                    <Button
+                        android:id="@+id/btnXeso"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+
+                        android:background="@drawable/iconxeso">
+                    </Button>
+                </androidx.cardview.widget.CardView>
+                <androidx.cardview.widget.CardView
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
+                    android:layout_marginRight="10dp"
+                    card_view:cardUseCompatPadding="true"
+                    card_view:cardCornerRadius="8dp">
+                    <Button
+                        android:id="@+id/btnMoto"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@drawable/iconmoto"
+                        >
+                    </Button>
+                </androidx.cardview.widget.CardView>
+                <androidx.cardview.widget.CardView
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
+                    android:layout_marginRight="20dp"
+                    card_view:cardUseCompatPadding="true"
+                    card_view:cardCornerRadius="8dp">
+
+                    <Button
+                        android:id="@+id/btnContay"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@drawable/iconcontay"
+                        />
+                </androidx.cardview.widget.CardView>
+
+            </LinearLayout>
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@drawable/iconcontay"
-                />
-        </androidx.cardview.widget.CardView>
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Xe tay ga"
+                    android:layout_marginLeft="20dp">
+                </TextView>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Xe số"
+                    android:layout_marginLeft="130dp">
+                </TextView>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Xe Motor"
+                    android:layout_marginLeft="220dp">
+                </TextView>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Xe côn tay"
+                    android:layout_marginLeft="310dp">
 
-    </LinearLayout>
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Xe tay ga"
-            android:layout_marginLeft="20dp">
-        </TextView>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Xe số"
-            android:layout_marginLeft="130dp">
-        </TextView>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Xe Motor"
-            android:layout_marginLeft="220dp">
-        </TextView>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Xe côn tay"
-            android:layout_marginLeft="310dp">
+                </TextView>
 
-        </TextView>
-
-    </RelativeLayout>
-    <TextView
-        android:id="@+id/xemthem"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="right"
-        android:text="xem thêm >>"
-        android:textColor="#E91E63" />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="25dp"
-        android:text="Ô tô"
-        android:textStyle="bold"
-        >
-    </TextView>
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="95dp"
-        >
-        <androidx.cardview.widget.CardView
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:layout_marginRight="10dp"
-            card_view:cardUseCompatPadding="true"
-            card_view:cardCornerRadius="8dp">
-            <Button
-                android:id="@+id/btnCivic"
-                android:background="@drawable/iconcivic"
+            </RelativeLayout>
+            <TextView
+                android:id="@+id/xemall"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
-            </Button>
-        </androidx.cardview.widget.CardView>
-        <androidx.cardview.widget.CardView
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:layout_marginRight="10dp"
-            card_view:cardUseCompatPadding="true"
-            card_view:cardCornerRadius="8dp">
+                android:layout_height="wrap_content"
+                android:gravity="left"
+                android:text="xem tất cả >>"
+                android:layout_marginBottom="20dp"
+                android:layout_marginTop="5dp"
+                android:textColor="#E91E63" />
 
-            <Button
-                android:id="@+id/btnBrio"
+            <TextView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-
-                android:background="@drawable/iconbrio"></Button>
-        </androidx.cardview.widget.CardView>
-        <androidx.cardview.widget.CardView
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:layout_marginRight="10dp"
-            card_view:cardUseCompatPadding="true"
-            card_view:cardCornerRadius="8dp">
-            <Button
-                android:id="@+id/btnCity"
+                android:layout_height="25dp"
+                android:text="Ô tô"
+                android:textStyle="bold"
+                >
+            </TextView>
+            <LinearLayout
+                android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@drawable/iconcity">
-            </Button>
-        </androidx.cardview.widget.CardView>
-        <androidx.cardview.widget.CardView
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:layout_marginRight="20dp"
-            card_view:cardUseCompatPadding="true"
-            card_view:cardCornerRadius="8dp">
+                android:layout_height="95dp"
+                >
+                <androidx.cardview.widget.CardView
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
+                    android:layout_marginRight="10dp"
+                    card_view:cardUseCompatPadding="true"
+                    card_view:cardCornerRadius="8dp">
+                    <Button
+                        android:id="@+id/btnCivic"
+                        android:background="@drawable/iconcivic"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+                    </Button>
+                </androidx.cardview.widget.CardView>
+                <androidx.cardview.widget.CardView
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
+                    android:layout_marginRight="10dp"
+                    card_view:cardUseCompatPadding="true"
+                    card_view:cardCornerRadius="8dp">
+
+                    <Button
+                        android:id="@+id/btnBrio"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+
+                        android:background="@drawable/iconbrio"></Button>
+                </androidx.cardview.widget.CardView>
+                <androidx.cardview.widget.CardView
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
+                    android:layout_marginRight="10dp"
+                    card_view:cardUseCompatPadding="true"
+                    card_view:cardCornerRadius="8dp">
+                    <Button
+                        android:id="@+id/btnCity"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@drawable/iconcity">
+                    </Button>
+                </androidx.cardview.widget.CardView>
+                <androidx.cardview.widget.CardView
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
+                    android:layout_marginRight="20dp"
+                    card_view:cardUseCompatPadding="true"
+                    card_view:cardCornerRadius="8dp">
 
 
-            <Button
-                android:id="@+id/btnAccord"
+                    <Button
+                        android:id="@+id/btnAccord"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@drawable/iconaccord"></Button>
+
+                </androidx.cardview.widget.CardView>
+
+            </LinearLayout>
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@drawable/iconaccord"></Button>
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Civic"
+                    android:layout_marginLeft="20dp">
+                </TextView>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Brio"
+                    android:layout_marginLeft="130dp">
+                </TextView>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="City"
+                    android:layout_marginLeft="230dp">
+                </TextView>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Accord"
+                    android:layout_marginLeft="320dp">
 
-        </androidx.cardview.widget.CardView>
+                </TextView>
 
-    </LinearLayout>
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Civic"
-            android:layout_marginLeft="20dp">
-        </TextView>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Brio"
-            android:layout_marginLeft="130dp">
-        </TextView>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="City"
-            android:layout_marginLeft="230dp">
-        </TextView>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Accord"
-            android:layout_marginLeft="320dp">
+            </RelativeLayout>
+            <TextView
+                android:id="@+id/xemtatcaxehoi"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="left"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="20dp"
+                android:text="xem tất cả >>"
+                android:textColor="#E91E63" />
+        </LinearLayout>
+    </ScrollView>
 
-        </TextView>
-
-    </RelativeLayout>
-    <TextView
-        android:id="@+id/xemtatcaxehoi"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="right"
-        android:text="xem tất cả >>"
-        android:textColor="#E91E63" />
 </LinearLayout>
