--- a/MyApplication/app/src/main/res/layout/item_listview_tintuc.xml
+++ b/MyApplication/app/src/main/res/layout/item_listview_tintuc.xml
@@ -31,11 +31,14 @@
                 android:id="@+id/tvTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:textStyle="bold"/>
             <TextView
                 android:id="@+id/tvDesc"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="10dp"
                 />
         </LinearLayout>
 
