--- a/MyApplication/app/src/main/res/layout/activity_daily.xml
+++ b/MyApplication/app/src/main/res/layout/activity_daily.xml
@@ -6,9 +6,37 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".MainActivity" >
-    <ListView
-        android:id="@+id/lstDaiLY"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <Toolbar
+            android:layout_marginLeft="-15dp"
+            android:layout_width="match_parent"
+            android:layout_height="55dp">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:text="Danh sách đại lý"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:textSize="20dp"
+                    android:textColor="@android:color/black"
+                    android:textStyle="bold"/>
+
+            </RelativeLayout>
+
+        </Toolbar>
+        <ListView
+            android:id="@+id/lstDaiLY"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
+
+
 
 </ScrollView>
