--- a/MyApplication/app/src/main/res/layout/fragment_taikhoan.xml
+++ b/MyApplication/app/src/main/res/layout/fragment_taikhoan.xml
@@ -5,72 +5,184 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Home_Fragment.Home_Child.userFragment">
-    <androidx.cardview.widget.CardView
-        card_view:cardUseCompatPadding="true"
-        card_view:cardCornerRadius="8dp"
-        android:layout_marginBottom="10dp"
+    tools:context=".TaiKhoanFragment">
+    <Toolbar
+        android:layout_marginLeft="-15dp"
         android:layout_width="match_parent"
-        android:layout_height="250dp"
-        card_view:cardBackgroundColor="@color/colorPrimary">
-        <LinearLayout
+        android:layout_height="65dp">
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
-            <ImageView
-                android:id="@+id/imgAva"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_marginTop="50dp"
-                android:layout_gravity="center_horizontal"
-                android:src="@drawable/border_avatar"
-                android:background="@drawable/icon_account"/>
-            <Button
-                android:id="@+id/btnUpload"
+            android:orientation="horizontal">
+
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_gravity="center_horizontal"
-                android:text="Thêm ảnh"/>
-        </LinearLayout>
+                android:text="Tài khoản"
+                android:layout_centerInParent="true"
+                android:textSize="20dp"
+                android:textColor="@color/colorPrimary"
+                android:textStyle="bold"/>
+
+            <ImageView
+                android:layout_width="90dp"
+                android:layout_height="match_parent"
+                android:layout_marginTop="2dp"
+                android:layout_gravity="center"
+                android:background="@drawable/icon_hon" />
+        </RelativeLayout>
+
+    </Toolbar>
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_marginBottom="10dp"
+        card_view:cardCornerRadius="8dp"
+        android:layout_gravity="center"
+        card_view:cardUseCompatPadding="true">
+        <ImageView
+            android:id="@+id/imgAva"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/icon_account"
+            android:src="@drawable/border_avatar" />
+
+
 
     </androidx.cardview.widget.CardView>
-    <EditText
-        android:id="@+id/edTen"
-        android:layout_width="300dp"
-        android:layout_height="50dp"
-        android:hint="Họ tên"
+    <Button
+        android:id="@+id/btnUpload"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="10dp"
+        android:text="Thêm ảnh" />
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:layout_marginBottom="20dp"
-        android:layout_gravity="center"/>
-    <EditText
-        android:id="@+id/edSDT"
-        android:layout_width="300dp"
-        android:layout_height="50dp"
-        android:hint="Số điện thoại"
+        android:gravity="center_vertical">
+        <TextView
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:text="Họ tên"
+            android:textColor="@android:color/black"
+            android:textSize="20dp"
+            android:textStyle="bold"/>
+        <EditText
+            android:id="@+id/edTen"
+            android:layout_width="300dp"
+            android:layout_height="50dp"
+            android:hint="Nhập họ tên"
+            android:layout_gravity="center"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:layout_marginBottom="20dp"
-        android:layout_gravity="center"/>
-    <EditText
-        android:id="@+id/edNgaysinh"
-        android:layout_width="300dp"
-        android:layout_height="50dp"
-        android:hint="Ngày sinh"
+        android:gravity="center_vertical">
+        <TextView
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:text="SĐT"
+            android:textSize="20dp"
+            android:textColor="@android:color/black"
+            android:textStyle="bold"/>
+        <EditText
+            android:id="@+id/edSDT"
+            android:layout_width="300dp"
+            android:layout_height="50dp"
+            android:hint="Nhập số điện thoại"
+            android:layout_gravity="center"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:layout_marginBottom="20dp"
-        android:layout_gravity="center"/>
-    <EditText
-        android:id="@+id/edDiachi"
-        android:layout_width="300dp"
-        android:layout_height="50dp"
-        android:hint="Địa chỉ"
+        android:gravity="center_vertical">
+        <TextView
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:text="Ngày sinh"
+            android:textSize="20dp"
+            android:textColor="@android:color/black"
+            android:textStyle="bold"/>
+        <EditText
+            android:id="@+id/edNgaysinh"
+            android:layout_width="300dp"
+            android:layout_height="50dp"
+            android:hint="Nhập ngày sinh"
+            android:layout_gravity="center"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:layout_marginBottom="20dp"
-        android:layout_gravity="center"/>
-    <EditText
-        android:id="@+id/edMatkhau"
-        android:layout_width="300dp"
-        android:layout_height="50dp"
-        android:hint="Mật khẩu"
+        android:gravity="center_vertical">
+        <TextView
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:text="Địa chỉ"
+            android:textSize="20dp"
+            android:textColor="@android:color/black"
+            android:textStyle="bold"/>
+        <EditText
+            android:id="@+id/edDiachi"
+            android:layout_width="300dp"
+            android:layout_height="50dp"
+            android:hint="Nhập địa chỉ"
+            android:layout_gravity="center"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:layout_marginBottom="20dp"
+        android:gravity="center_vertical">
+        <TextView
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:text="Mật khẩu"
+            android:textColor="@android:color/black"
+            android:textSize="20dp"
+            android:textStyle="bold"/>
+        <EditText
+            android:id="@+id/edMatkhau"
+            android:layout_width="300dp"
+            android:layout_height="50dp"
+            android:hint="Nhập mật khẩu"
+            android:password="true"
+            android:layout_gravity="center"/>
+    </LinearLayout>
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
         android:layout_gravity="center"
-        android:password="true"/>
+        android:layout_width="74dp"
+        android:layout_height="62dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:visibility="gone" />
     <Button
         android:id="@+id/btnSave"
         android:layout_width="wrap_content"
