--- a/MyApplication/app/src/main/res/layout/fragment_dangki.xml
+++ b/MyApplication/app/src/main/res/layout/fragment_dangki.xml
@@ -7,7 +7,16 @@
     tools:context=".TaoTaiKhoan"
     >
 
-
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Đăng kí"
+        android:gravity="center"
+        android:textStyle="bold"
+        android:textSize="30dp"
+        android:textColor="@color/RedButton"
+        android:layout_marginBottom="30dp"
+        />
     <EditText
         android:id="@+id/edMail"
         android:layout_width="300dp"
