--- a/MyApplication/app/src/main/res/layout/fragment_caidat.xml
+++ b/MyApplication/app/src/main/res/layout/fragment_caidat.xml
@@ -49,7 +49,7 @@
         android:text="Thêm tin tức"
         android:textColor="@color/Black"
         android:textStyle="bold"
-        android:background="@color/Tran"/>
+        android:background="@color/Transparent"/>
 
     <Button
         android:id="@+id/btnDangxuat"
@@ -61,5 +61,5 @@
         android:text="Đăng xuất"
         android:textColor="@color/RedButton"
         android:textStyle="bold"
-        android:background="@color/Tran"/>
+        android:background="@color/Transparent"/>
 </LinearLayout>
