--- a/MyApplication/app/src/main/res/layout/fragment_thongso.xml
+++ b/MyApplication/app/src/main/res/layout/fragment_thongso.xml
@@ -19,9 +19,11 @@
 
         </TextView>
         <TextView
+            android:layout_marginLeft="5dp"
             android:id="@+id/txtThongsokithuat"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:textSize="17dp">
 
         </TextView>
     </LinearLayout>
